fix spacing of docschedule

--- a/client/src/Pages/DocDashboard/Schedule/DoctorSchedule.module.css
+++ b/client/src/Pages/DocDashboard/Schedule/DoctorSchedule.module.css
@@ -372,7 +372,7 @@
    .DSContainer1 form {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
-      justify-content: center;
+      justify-items: start;
    }
    .DSContainer1 label {
       font-size: 1rem;
@@ -490,6 +490,7 @@
       grid-template-columns: repeat(1 1fr);
       grid-template-rows: repeat(3, 1fr);
       margin: auto;
+      height: 800px;
    }
    .patientContainer {
       grid-column: 1/3;
